# Internet_soft_test_task

./: README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  main.qml
server/: CMakeLists.txt  connection.cpp  connection.h  main.cpp  server.cpp  server.h  thread_connections.cpp  thread_connections.h
